agents/docs/versions/V3.12.0/constitution/upgrade/ITERATION_PROCESS.md
# 宪法规范迭代流程

**版本**: 1.0  
**创建日期**: 2026-03-10  
**状态**: ✅ 已生效

---

## 📋 概述

宪法规范迭代流程定义了如何根据日常工作情况（审计报告、进展报告、验收报告等）发现规范不完善的地方，并通过总结反思智能体提出改进建议，经用户确认后更新宪法规范。

---

## 🎯 目标

1. **自我迭代**: 宪法规范能够根据实际工作情况持续改进
2. **用户确认**: 所有规范变更须经用户确认后才生效
3. **可追溯**: 每次变更有完整的变更记录和影响分析
4. **审计监督**: 变更过程受审计智能体监督

---

## 🔄 迭代流程

```
┌─────────────────┐
│  总结反思触发   │
│  (每日/里程碑)  │
└────────┬────────┘
         │
         ▼
┌─────────────────┐
│  数据收集与分析 │
│  - 审计报告     │
│  - 进展报告     │
│  - 验收报告     │
│  - 会话日志     │
└────────┬────────┘
         │
         ▼
┌─────────────────┐
│  问题识别       │
│  - 规范缺陷     │
│  - 技能缺失     │
│  - 流程瓶颈     │
└────────┬────────┘
         │
         ▼
┌─────────────────┐
│  迭代提案生成   │
│  - 变更对比     │
│  - 影响分析     │
│  - 确认事项     │
└────────┬────────┘
         │
         ▼
┌─────────────────┐
│  用户确认       │
│  (必须步骤)     │
└────────┬────────┘
         │
         ▼
┌─────────────────┐
│  审计监督       │
│  (验证合规性)   │
└────────┬────────┘
         │
         ▼
┌─────────────────┐
│  正式生效       │
│  - 更新版本号   │
│  - 更新变更日志 │
└─────────────────┘
```

---

## 📊 迭代触发条件

### 1. 每日总结（定期触发）

**时间**: 每日 23:00  
**触发者**: 总结反思智能体  
**输入**:
- 当日审计报告
- 当日进展报告
- 当日验收报告
- 当日会话日志摘要

### 2. 里程碑达成（事件触发）

**触发条件**:
- 重大需求完成（如 P0 技能开发完成）
- 新技能开发完成
- 重大流程优化完成

### 3. 审计发现（事件触发）

**触发条件**:
- 审计智能体发现规范缺陷
- 审计智能体发现技能缺失
- 审计智能体发现流程瓶颈

### 4. 用户请求（手动触发）

**触发条件**: 用户明确要求更新规范

---

## 🔍 迭代分析维度

| 维度 | 分析内容 | 数据来源 | 负责人 |
|------|---------|---------|--------|
| **合规性** | 是否有违规操作 | 审计报告 | 审计智能体 |
| **效率** | 是否有流程瓶颈 | 进展报告 | 进展跟进智能体 |
| **质量** | 是否有验收失败 | 验收报告 | 需求验收智能体 |
| **技能** | 是否有技能缺失 | 技能目录 + 任务记录 | 总结反思智能体 |
| **流程** | 是否有流程缺陷 | 会话日志 + 验收报告 | 总结反思智能体 |

---

## 📝 迭代提案格式

### 提案结构

```markdown
# 宪法规范迭代提案 (V{当前版本} → V{新版本})

## 变更概览
| 章节 | 变更类型 | 变更摘要 | 优先级 |
|------|---------|---------|--------|
| 第二章 §3 | 新增 | 增加审计智能体职责 | P0 |
| 第五章 | 修订 | 更新可配置参数 | P1 |

## 变更对比

### 变更前（V{当前版本}）
```
原文内容
```

### 变更后（V{新版本}）
```
新内容
```

## 影响分析

### 影响智能体
- requirement-acceptance
- audit

### 影响技能
- 需新增 xxx-skill
- 需更新 yyy-skill

### 影响流程
- 验收流程增加审计环节
- 新增技能开发流程

### 影响评估
- **开发工作量**: 约 X 小时
- **测试工作量**: 约 Y 小时
- **文档工作量**: 约 Z 小时

## 用户确认项

⚠️ 以下变更需用户确认后才能生效：

- [ ] 新增审计智能体职责
- [ ] 更新验收流程
- [ ] 新增技能要求

## 附录

### 参考文档
- 审计报告：agents/constitution/audit/reports/2026-03-10-1253.md
- 验收报告：project/p0-skills-development/changes/init/FINAL_ACCEPTANCE_REPORT.md

### 变更记录
- 提案人：summary-reflection
- 提案时间：2026-03-10 13:30
- 审计意见：audit（待填写）
```

---

## ✅ 用户确认流程

### 步骤 1: 提案提交

**负责人**: 总结反思智能体  
**输出**: 《宪法规范迭代提案》  
**提交方式**: 飞书文档 + 消息通知

### 步骤 2: 用户审查

**负责人**: 用户  
**审查内容**:
- 变更内容是否合理
- 影响分析是否完整
- 优先级是否恰当

### 步骤 3: 用户确认

**负责人**: 用户  
**确认方式**: 勾选确认框 + 回复确认消息  
**确认项**: 所有标注为"用户确认项"的变更

### 步骤 4: 审计监督

**负责人**: 审计智能体  
**验证内容**:
- 变更是否符合宪法规范核心原则
- 变更是否经过用户确认
- 影响分析是否完整

### 步骤 5: 正式生效

**负责人**: 总结反思智能体（执行）、审计智能体（监督）  
**执行内容**:
- 更新宪法规范文档
- 更新版本号
- 更新变更日志
- 通知相关智能体

---

## 📚 版本管理

### 版本号规则

**格式**: `V{主版本}.{次版本}.{修订号}`

| 版本层级 | 触发条件 | 示例 |
|---------|---------|------|
| **主版本** | 重大架构变更（如新增智能体、删除智能体） | V3.0.0 → V4.0.0 |
| **次版本** | 功能增强（如新增技能、流程优化） | V3.7.0 → V3.8.0 |
| **修订号** | 文字修订、错别字修正 | V3.7.1 → V3.7.2 |

### 变更日志

**位置**: `agents/docs/specs/constitution/CHANGELOG.md`（宪法根目录）

**格式**:
```markdown
# 变更日志

## V3.8.0 (2026-03-10)

### 新增
- 审计智能体职责（第二章 §3）
- 宪法规范迭代流程（新增章节）

### 修订
- 更新可配置参数（第五章）
- 更新验收流程（第二章 §4）

### 修复
- 修复术语定义不一致问题
```

---

## 🔗 相关文档

- 总结反思智能体 AGENTS.md: `agents/constitution/summary-reflection/AGENTS.md`
- 审计智能体 AGENTS.md: `agents/constitution/audit/AGENTS.md`
- 宪法当前入口：`agents/docs/specs/constitution/CONSTITUTION.md`
- 变更日志：`agents/docs/specs/constitution/CHANGELOG.md`

---

## 🔰 轻量升级入口（V3.12.0 新增）

### 触发方式

当用户说以下内容时，自动触发正式升级流程：
- "帮我升级宪法规范 XXX"
- "我想调整 ETHOS.md"
- "有个流程优化建议"
- "我们应该加一个 XXX 智能体"

### 主会话执行步骤

```
1. 主会话收到用户请求
2. 主会话 spawn summary-reflection（轻量 prompt）
3. summary-reflection 生成正式提案
4. 主会话汇报给用户
5. 用户确认
6. audit 审查
7. 正式生效
```

### spawn 命令模板

```python
sessions_spawn(
    runtime="acp",
    agentId="summary-reflection",
    label="constitution-upgrade-proposal",
    task="""用户想升级宪法规范：[用户的描述]
请查阅 agents/docs/specs/constitution/upgrade/ITERATION_PROCESS.md
按模板格式生成规范升级提案
输出到 agents/docs/versions/V{当前版本}/constitution/upgrade-to-V{目标版本}/"""
)
```

### 判断：正式升级 vs 紧急修复

| 场景 | 路径 |
|------|------|
| 新增/删除/合并智能体 | 正式升级路径 |
| 流程变更（不涉及文件修改） | 正式升级路径 |
| 错别字/格式修正 | 紧急修复路径 |
| ETHOS/SOUL 人格调整 | 正式升级路径 |
| 迁移文件位置（无内容变更） | 紧急修复路径 |

**紧急修复路径**：主会话直接处理 + audit 现场确认 + 补充 DECISION_LOG

---

## 📝 示例：基于今日工作的迭代提案

### 触发条件

- **类型**: 里程碑达成 + 审计发现
- **时间**: 2026-03-10 13:30
- **触发者**: summary-reflection

### 发现问题

根据今日审计报告（2026-03-10-1253.md）发现：

1. **审计智能体职责不明确**: 当前宪法规范未明确定义审计智能体的日常审计职责
2. **总结反思流程不完善**: 未明确总结反思智能体如何结合审计报告进行规范迭代
3. **技能更新机制缺失**: 未定义技能发现和更新的正式流程

### 迭代提案

详见：`agents/docs/versions/V3.7.0/constitution/upgrade-to-V3.7.2/proposal.md`

---

**文档版本**: 1.0  
**创建日期**: 2026-03-10  
**下次审查**: 2026-03-17
